# bff/docs/swagger.yaml
@@ -419,6 +419,11 @@ definitions:
           $ref: '#/definitions/content.InfoSum'
         type: array
     type: object
+  content.GetUpdateVersionResponse:
+    properties:
+      version:
+        type: string
+    type: object
   content.GetWebsitesResponse:
     properties:
       websites:
@@ -495,6 +500,13 @@ definitions:
     - link
     - name
     type: object
+  content.SaveVersionRequest:
+    properties:
+      version:
+        type: string
+    required:
+    - version
+    type: object
   content.SaveWebsiteRequest:
     properties:
       description:
@@ -558,6 +570,11 @@ definitions:
         type: array
     required:
     - architecture_list
+    type: object
+  elecprice.GetBillingBalanceResponse:
+    properties:
+      price:
+        $ref: '#/definitions/elecprice.Price'
     type: object
   elecprice.GetPriceResponse:
     properties:
@@ -1996,6 +2013,44 @@ paths:
       summary: 取消电费提醒标准
       tags:
       - elecprice
+  /elecprice/electricityBillinBalance:
+    get:
+      description: 电费信息详情跳转
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 房间设备id
+        in: query
+        name: room_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功的返回信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/web.Response'
+            - properties:
+                msg:
+                  $ref: '#/definitions/elecprice.GetBillingBalanceResponse'
+              type: object
+        "500":
+          description: 系统异常
+          schema:
+            allOf:
+            - $ref: '#/definitions/web.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: 获取房间电费余额
+      tags:
+      - elecprice
   /elecprice/getArchitecture:
     get:
       description: 通过区域获取楼栋信息
@@ -3248,6 +3303,44 @@ paths:
       summary: 刷新短token
       tags:
       - user
+  /version/getVersion:
+    get:
+      description: 获取热更新版本
+      responses:
+        "200":
+          description: 成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/web.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/content.GetUpdateVersionResponse'
+              type: object
+      summary: 获取热更新版本
+      tags:
+      - version
+  /version/saveVersion:
+    post:
+      consumes:
+      - application/json
+      description: 更新热更新版本
+      parameters:
+      - description: 保存版本号请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/content.SaveVersionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/web.Response'
+      summary: 更新热更新版本
+      tags:
+      - version
   /website/delWebsite:
     post:
       consumes:
